@@ -1,16 +1,19 @@
 package ke.co.smartlaundry.controller;
 
+import ke.co.smartlaundry.dto.AddCartItemRequestDTO;
 import ke.co.smartlaundry.dto.CartItemDTO;
 import ke.co.smartlaundry.model.CartItem;
-import ke.co.smartlaundry.service.CartService;
 import ke.co.smartlaundry.security.SecurityUtils;
+import ke.co.smartlaundry.service.CartService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import jakarta.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/carts")
+@RequestMapping("/api/cart")
 public class CartController {
 
     private final CartService cartService;
@@ -20,23 +23,25 @@ public class CartController {
     }
 
     @GetMapping
-public ResponseEntity<List<CartItemDTO>> getCartItems() {
-    Long userId = SecurityUtils.getCurrentUserId();
-    List<CartItemDTO> items = cartService.getItems(userId).stream()
-        .map(i -> new CartItemDTO(i.getId(), i.getItemName(), i.getQuantity(), i.getPrice()))
-        .toList();
-    return ResponseEntity.ok(items);
-}
-
+    public ResponseEntity<List<CartItemDTO>> getCartItems() {
+        Long userId = SecurityUtils.getCurrentUserId();
+        List<CartItemDTO> items = cartService.getItems(userId).stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(items);
+    }
 
     @PostMapping("/add")
-    public ResponseEntity<CartItem> addItem(
-            @RequestParam String itemName,
-            @RequestParam int quantity,
-            @RequestParam double price
-    ) {
+    public ResponseEntity<CartItemDTO> addItem(@Valid @RequestBody AddCartItemRequestDTO request) {
         Long userId = SecurityUtils.getCurrentUserId();
-        return ResponseEntity.ok(cartService.addItemToCart(userId, itemName, quantity, price));
+        CartItem item = cartService.addItemToCart(
+                userId,
+                request.getItemName(),
+                request.getQuantity(),
+                request.getPrice(),
+                request.getCategoryId()
+        );
+        return ResponseEntity.ok(mapToDTO(item));
     }
 
     @DeleteMapping("/item/{itemId}")
@@ -50,5 +55,15 @@ public ResponseEntity<List<CartItemDTO>> getCartItems() {
         Long userId = SecurityUtils.getCurrentUserId();
         cartService.clearCart(userId);
         return ResponseEntity.noContent().build();
+    }
+
+    private CartItemDTO mapToDTO(CartItem item) {
+        return new CartItemDTO(
+                item.getId(),
+                item.getItemName(),
+                item.getQuantity(),
+                item.getPrice(),
+                item.getCategory() != null ? item.getCategory().getName() : null
+        );
     }
 }
